--- a/composer.json
+++ b/composer.json
@@ -28,13 +28,17 @@
         "drupal/ds": "^3.5",
         "drupal/feeds": "^3.0",
         "drupal/feeds_tamper": "^2.0",
+        "drupal/image_widget_crop": "^2.2",
+        "drupal/imce": "^1.7",
         "drupal/metatag": "^1.11",
         "drupal/migrate_plus": "^4.2",
         "drupal/migrate_tools": "^4.5",
         "drupal/module_filter": "^3.1",
         "drupal/pathauto": "^1.6",
         "drupal/sitemap": "^1.5",
+        "drupal/smart_date": "^1.1",
         "drupal/stickynav": "^1.1",
+        "drupal/yoast_seo": "^1.5",
         "drupal/zurb_foundation": "^6.0",
         "drush/drush": "^9.7.1 | ^10.0.0",
         "vlucas/phpdotenv": "^4.0",
