--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,12 @@
         "cweagans/composer-patches": "^1.6.5",
         "drupal/admin_toolbar": "^2.0",
         "drupal/adminimal_theme": "^1.5",
+        "drupal/block_class": "^1.1",
+        "drupal/config_delete": "^1.14",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.8.0",
         "drupal/core-composer-scaffold": "^8.8.0",
+        "drupal/devel": "^2.1",
         "drupal/domain_googlenews_sitemap": "^1.1",
         "drupal/ds": "^3.5",
         "drupal/feeds": "^3.0",
