update drupal modules

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/adminimal_theme": "^1.5",
         "drupal/block_class": "^1.1",
         "drupal/config_delete": "^1.14",
+        "drupal/config_devel": "^1.4",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.8.0",
         "drupal/core-composer-scaffold": "^8.8.0",
@@ -42,6 +43,7 @@
         "drupal/smart_date": "^1.1",
         "drupal/social_media_links": "^2.6",
         "drupal/stickynav": "^1.1",
+        "drupal/views_bulk_operations": "^3.3",
         "drupal/yoast_seo": "^1.5",
         "drupal/zurb_foundation": "^6.0",
         "drush/drush": "^9.7.1 | ^10.0.0",
