--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,12 @@
         "cweagans/composer-patches": "^1.6.5",
         "drupal/admin_toolbar": "^2.0",
         "drupal/adminimal_theme": "^1.5",
+        "drupal/better_exposed_filters": "^4.0",
         "drupal/block_class": "^1.1",
         "drupal/config_delete": "^1.14",
         "drupal/config_devel": "^1.4",
         "drupal/console": "^1.0.2",
+        "drupal/console-ar": "dev-master",
         "drupal/core": "^8.8.0",
         "drupal/core-composer-scaffold": "^8.8.0",
         "drupal/devel": "^2.1",
@@ -34,10 +36,14 @@
         "drupal/feeds_tamper": "^2.0",
         "drupal/image_widget_crop": "^2.2",
         "drupal/imce": "^1.7",
+        "drupal/layout_plugin": "^1.0",
         "drupal/metatag": "^1.11",
         "drupal/migrate_plus": "^4.2",
         "drupal/migrate_tools": "^4.5",
+        "drupal/migrate_upgrade": "^3.1",
         "drupal/module_filter": "^3.1",
+        "drupal/owlcarousel": "^1.0",
+        "drupal/owlcarousel2": "^1.0",
         "drupal/pathauto": "^1.6",
         "drupal/sitemap": "^1.5",
         "drupal/smart_date": "^1.1",
