--- a/web/modules/custom/winsports_complements/winsports_complements.info.yml
+++ b/web/modules/custom/winsports_complements/winsports_complements.info.yml
@@ -1,4 +1,4 @@
-name: 'Winsports Players'
+name: 'Winsports Complements'
 type: module
 description: 'This module allow render players JWPlayer, MediaStream in the display suite presentation'
 core: 8.x
