--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "drupal/core": "^8.8.0",
         "drupal/core-composer-scaffold": "^8.8.0",
         "drupal/devel": "^2.1",
+        "drupal/devel_php": "^1.1",
         "drupal/domain_googlenews_sitemap": "^1.1",
         "drupal/ds": "^3.5",
         "drupal/feeds": "^3.0",
