--- a/web/modules/custom/winsports_complements/winsports_complements.links.menu.yml
+++ b/web/modules/custom/winsports_complements/winsports_complements.links.menu.yml
@@ -1,6 +1,6 @@
 winsports_complements.players_config_form:
   title: 'Winsports Complements Players Config Form'
   route_name: winsports_complements.players_config_form
-  description: 'A description for the menu entry'
+  description: 'Add news players plugins'
   parent: system.admin_config_system
   weight: 99
