--- a/web/themes/custom/winsports/winsports.info.yml
+++ b/web/themes/custom/winsports/winsports.info.yml
@@ -30,6 +30,7 @@ regions:
   second_content: 'Second Content'
   second_sidebar_first: 'Second Left Sidebar'
   second_sidebar_second: 'Second Right Sidebar'
+  sub_after_content: 'Sub After Content'
   pre_footer: 'Pre Footer'
   footer_first: 'Footer first column'
   footer_middle: 'Footer middle column'
