Composer package added

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "drupal/domain_googlenews_sitemap": "^1.1",
         "drupal/ds": "^3.5",
         "drupal/feeds": "^3.0",
+        "drupal/feeds_ex": "^1.0@alpha",
         "drupal/feeds_tamper": "^2.0",
         "drupal/image_widget_crop": "^2.2",
         "drupal/imce": "^1.7",
