--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,17 @@
         "php": ">=7.0.8",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
+        "drupal/admin_toolbar": "^2.0",
+        "drupal/admin_toolbar_links_access_filter": "^2.0",
+        "drupal/admin_toolbar_tools": "^2.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.8.0",
         "drupal/core-composer-scaffold": "^8.8.0",
+        "drupal/devel": "^2.1",
+        "drupal/module_filter": "^3.1",
+        "drupal/pathauto": "^1.6",
+        "drupal/pdb": "^1.0@alpha",
+        "drupal/pdb_vue": "^1.0@alpha",
         "drush/drush": "^9.7.1 | ^10.0.0",
         "vlucas/phpdotenv": "^4.0",
         "webflo/drupal-finder": "^1.0.0",
