--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "drupal/core": "^8.8.0",
         "drupal/core-composer-scaffold": "^8.8.0",
         "drupal/devel": "^2.1",
+        "drupal/entityqueue": "^1.0@beta",
         "drupal/field_group": "^3.0",
         "drupal/module_filter": "^3.1",
         "drupal/pathauto": "^1.6",
