--- a/web/themes/custom/tailwindcss/tailwindcss.info.yml
+++ b/web/themes/custom/tailwindcss/tailwindcss.info.yml
@@ -5,3 +5,15 @@ type: theme
 base theme: stable
 libraries:
   - tailwindcss/global-styling
+regions:
+  header: 'Header'
+  content: 'Content'
+  fullcontent: 'Full Content'
+  footer: 'Footer'
+  breadcrumb: 'Breadcrumb'
+  sidebar_first: 'First Sidebar'
+  sidebar_second: 'Second sidebar'
+  help: 'Help'
+  highlighted: 'Highlighted'
+  primary_menu: 'Primary Menu'
+  secondary_menu: 'Secondary Menu'
