--- a/web/themes/custom/tailwindcss/tailwindcss.info.yml
+++ b/web/themes/custom/tailwindcss/tailwindcss.info.yml
@@ -6,15 +6,16 @@ base theme: stable
 libraries:
   - tailwindcss/global-styling
 regions:
-  header: 'Header'
-  content: 'Content'
-  fullcontent: 'Full Content'
-  footer: 'Footer'
-  breadcrumb: 'Breadcrumb'
-  sidebar_first: 'First Sidebar'
-  sidebar_second: 'Second sidebar'
-  help: 'Help'
-  highlighted: 'Highlighted'
-  primary_menu: 'Primary Menu'
-  secondary_menu: 'Secondary Menu'
-  postcontent: 'After Main Content'
+  fullcontent: '01 - Contenido a 1 Columna'
+  content: '02 - Contenido principal'
+  postcontent: '03 - Gris - Ancho completo'
+  postcontent2: '04 - Contenido Extra'
+  footer: '05 - Footer'
+  header: '06 - Header'
+  breadcrumb: '06 - Breadcrumb'
+  sidebar_first: '06 - First Sidebar'
+  sidebar_second: '06 - Second sidebar'
+  help: '06 - Help'
+  highlighted: '06 - Highlighted'
+  primary_menu: '06 - Primary Menu'
+  secondary_menu: '06 - Secondary Menu'
