--- a/web/themes/custom/tailwindcss/tailwindcss.info.yml
+++ b/web/themes/custom/tailwindcss/tailwindcss.info.yml
@@ -9,8 +9,9 @@ regions:
   fullcontent: '01 - Contenido a 1 Columna'
   content: '02 - Contenido principal'
   postcontent: '03 - Gris - Ancho completo'
-  postcontent2: '04 - Contenido Extra'
-  footer: '05 - Footer'
+  postcontent_sidebar: '04 - Extra Columna izquierda'
+  postcontent2: '05 - Extra - Columna derecha'
+  footer: '06 - Footer'
   header: '06 - Header'
   breadcrumb: '06 - Breadcrumb'
   sidebar_first: '06 - First Sidebar'
