install module views_infinite_scroll

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "drupal/pdb": "^1.0@alpha",
         "drupal/pdb_vue": "^1.0@alpha",
         "drupal/tamper": "^1.0@alpha",
+        "drupal/views_infinite_scroll": "^1.6",
         "drush/drush": "^9.7.1 | ^10.0.0",
         "vlucas/phpdotenv": "^4.0",
         "webflo/drupal-finder": "^1.0.0",
