--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal/field_group": "^3.0",
         "drupal/mobile_device_detection": "^3.2",
         "drupal/module_filter": "^3.1",
+        "drupal/owlcarousel": "^1.0@alpha",
         "drupal/pathauto": "^1.6",
         "drupal/pdb": "^1.0@alpha",
         "drupal/pdb_vue": "^1.0@alpha",
