Home page completed

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/pdb": "^1.0@alpha",
         "drupal/pdb_vue": "^1.0@alpha",
         "drupal/responsive_menu": "^2.6",
+        "drupal/single_image_formatter": "^1.5",
         "drupal/tamper": "^1.0@alpha",
         "drupal/views_infinite_scroll": "^1.6",
         "drush/drush": "^9.7.1 | ^10.0.0",
