--- a/web/modules/custom/optawidgets/components/opta_tournament_stats_block/opta_tournament_stats_block.info.yml
+++ b/web/modules/custom/optawidgets/components/opta_tournament_stats_block/opta_tournament_stats_block.info.yml
@@ -7,8 +7,8 @@ core: '8.x'
 module_status: active
 template: template.html
 presentation: vue
-#contexts:
-#  entity: node
+contexts:
+  entity: node
 add_js:
   footer:
     'opta_tournament_stats_block.js': {}
