--- a/web/modules/custom/optawidgets/components/opta_tournament_stats_block/opta_tournament_stats_block.info.yml
+++ b/web/modules/custom/optawidgets/components/opta_tournament_stats_block/opta_tournament_stats_block.info.yml
@@ -13,7 +13,7 @@ add_js:
   footer:
     'opta_tournament_stats_block.js': {}
 libraries:
-  - optawidgets/axios
+  - optafeeds/axios
   - optawidgets/opta.widgets
   - optawidgets/opta.settings
   - optafeeds/tailwindcss
