--- a/web/modules/custom/optawidgets/components/match_menu_block/match_menu_block.info.yml
+++ b/web/modules/custom/optawidgets/components/match_menu_block/match_menu_block.info.yml
@@ -1,7 +1,7 @@
-name: Opta Match Goal replay
-machine_name: opta-match-goal-replay
+name: Match Menu
+machine_name: match-menu
 type: pdb
-description: 'Opta Match Goal replay widget block. Should be placed in match node page with opta fields.'
+description: 'Match Menu.'
 package: Vue
 core: '8.x'
 module_status: active
@@ -11,7 +11,7 @@ contexts:
   entity: node
 add_js:
   footer:
-    'opta_match_goal_replay_block.js': {}
+    'match_menu_block.js': {}
 libraries:
   - optafeeds/axios
   - optawidgets/opta.widgets
