--- a/web/modules/custom/optawidgets/components/opta_tournament_scorers_block/opta_tournament_scorers_block.info.yml
+++ b/web/modules/custom/optawidgets/components/opta_tournament_scorers_block/opta_tournament_scorers_block.info.yml
@@ -13,6 +13,6 @@ add_js:
   footer:
     'opta_tournament_scorers_block.js': {}
 libraries:
-  - optawidgets/axios
+  - optafeeds/axios
   - optawidgets/opta.widgets
   - optawidgets/opta.settings
