section top content

--- a/web/themes/custom/tailwindcss/tailwindcss.info.yml
+++ b/web/themes/custom/tailwindcss/tailwindcss.info.yml
@@ -21,3 +21,4 @@ regions:
   highlighted: '06 - Highlighted'
   primary_menu: '06 - Primary Menu'
   secondary_menu: '06 - Secondary Menu'
+  top_content: 'Top Content'
