Video players updated

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "drupal/responsive_menu": "^2.6",
         "drupal/single_image_formatter": "^1.5",
         "drupal/slick_views": "^2.2",
+        "drupal/string_field_formatter": "^1.1",
         "drupal/tamper": "^1.0@alpha",
         "drupal/views_infinite_scroll": "^1.6",
         "drush/drush": "^9.7.1 | ^10.0.0",
