--- a/web/themes/custom/tailwindcss/tailwindcss.info.yml
+++ b/web/themes/custom/tailwindcss/tailwindcss.info.yml
@@ -23,3 +23,4 @@ regions:
   primary_menu: '06 - Primary Menu'
   secondary_menu: '06 - Secondary Menu'
   top_content: 'Top Content'
+  hidden: 'Hidden'
