--- a/web/modules/custom/custom_ads/custom_ads.libraries.yml
+++ b/web/modules/custom/custom_ads/custom_ads.libraries.yml
@@ -1,5 +1,8 @@
 drupal.custom_ads:
   version: VERSION
+  css:
+    component:
+      css/components/custom_ads.module.css: {}
   js:
     js/custom_ads.js: {}
   dependencies:
