--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal/entityqueue": "^1.0@beta",
         "drupal/eu_cookie_compliance": "^1.8",
         "drupal/field_group": "^3.0",
+        "drupal/libraries": "^3.0@alpha",
         "drupal/link_attributes": "^1.10",
         "drupal/module_filter": "^3.1",
         "drupal/owlcarousel": "^1.0@alpha",
