--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "drupal/redirect": "^1.5",
         "drupal/responsive_menu": "^2.6",
         "drupal/single_image_formatter": "^1.5",
+        "drupal/slick_extras": "^1.0@RC",
         "drupal/slick_views": "^2.2",
         "drupal/social_media_links": "^2.6",
         "drupal/string_field_formatter": "^1.1",
