update widget fc

--- a/web/modules/custom/optawidgets/components/opta_tournament_stats_block/opta_tournament_stats_block.info.yml
+++ b/web/modules/custom/optawidgets/components/opta_tournament_stats_block/opta_tournament_stats_block.info.yml
@@ -16,4 +16,5 @@ libraries:
   - optafeeds/axios
   - optawidgets/opta.widgets
   - optawidgets/opta.settings
+  - optafeeds/momentjs
   - optafeeds/tailwindcss
