--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "drupal/entityqueue": "^1.0@beta",
         "drupal/eu_cookie_compliance": "^1.8",
         "drupal/field_group": "^3.0",
+        "drupal/io": "^1.1",
         "drupal/libraries": "^3.0@alpha",
         "drupal/link_attributes": "^1.10",
         "drupal/memcache": "^2.0",
