--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "drupal/eu_cookie_compliance": "^1.8",
         "drupal/field_group": "^3.0",
         "drupal/io": "^1.1",
+        "drupal/lazy": "^3.4",
         "drupal/libraries": "^3.0@alpha",
         "drupal/link_attributes": "^1.10",
         "drupal/memcache": "^2.0",
