--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/advagg": "^4.0",
         "drupal/better_exposed_filters": "^4.0@alpha",
         "drupal/better_social_sharing_buttons": "^2.1",
+        "drupal/big_pipe_sessionless": "^1.2",
         "drupal/blazy": "^2.0",
         "drupal/blocache": "^1.0",
         "drupal/block_class": "^1.1",
