--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal/core": "^8.8.0",
         "drupal/core-composer-scaffold": "^8.8.0",
         "drupal/core-project-message": "^8.8",
+        "drupal/csp": "^1.12",
         "drupal/devel": "^2.1",
         "drupal/entityqueue": "^1.0@beta",
         "drupal/eu_cookie_compliance": "^1.8",
@@ -42,6 +43,7 @@
         "drupal/libraries": "^3.0@alpha",
         "drupal/link_attributes": "^1.10",
         "drupal/memcache": "^2.0",
+        "drupal/metatag": "^1.13",
         "drupal/minifyhtml": "^1.10",
         "drupal/module_filter": "^3.1",
         "drupal/owlcarousel": "^1.0@alpha",
@@ -51,6 +53,7 @@
         "drupal/redirect": "^1.5",
         "drupal/redis": "^1.4",
         "drupal/responsive_menu": "^2.6",
+        "drupal/seo_checklist": "^4.1",
         "drupal/single_image_formatter": "^1.5",
         "drupal/slick_extras": "^1.0@RC",
         "drupal/slick_views": "^2.2",
@@ -59,6 +62,7 @@
         "drupal/tamper": "^1.0@alpha",
         "drupal/twig_tweak": "^2.5",
         "drupal/views_infinite_scroll": "^1.6",
+        "drupal/xmlsitemap": "^1.0",
         "drush/drush": "^9.7.1 | ^10.0.0",
         "vlucas/phpdotenv": "^4.0",
         "webflo/drupal-finder": "^1.0.0",
