--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "drupal/minifyhtml": "^1.10",
         "drupal/module_filter": "^3.1",
         "drupal/owlcarousel": "^1.0@alpha",
+        "drupal/pace": "^2.0",
         "drupal/pathauto": "^1.6",
         "drupal/pdb": "^1.0@alpha",
         "drupal/pdb_vue": "^1.0@alpha",
