--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "drupal/admin_toolbar_links_access_filter": "^2.0",
         "drupal/admin_toolbar_tools": "^2.0",
         "drupal/advagg": "^4.0",
+        "drupal/amp": "^3.4",
+        "drupal/amptheme": "^3.0",
         "drupal/better_exposed_filters": "^4.0@alpha",
         "drupal/better_social_sharing_buttons": "^2.1",
         "drupal/big_pipe_sessionless": "^1.2",
