--- a/web/themes/custom/win_amp/win_amp.info.yml
+++ b/web/themes/custom/win_amp/win_amp.info.yml
@@ -5,6 +5,7 @@ description: The Win AMP subtheme sets custom styles on AMP pages.
 package: Custom
 # core: 8.x
 regions:
+  menu: Menu
   header: Header
   content: Content
   footer: Footer
