--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/core-project-message": "^8.8",
         "drupal/csp": "^1.12",
         "drupal/devel": "^2.1",
+        "drupal/dfp": "^1.0@alpha",
         "drupal/ds": "^3.7",
         "drupal/entityqueue": "^1.0@beta",
         "drupal/eu_cookie_compliance": "^1.8",
