--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "drupal/ds": "^3.7",
         "drupal/entityqueue": "^1.0@beta",
         "drupal/eu_cookie_compliance": "^1.8",
+        "drupal/field_formatter_class": "^1.4",
         "drupal/field_group": "^3.0",
         "drupal/io": "^1.1",
         "drupal/lazy": "^3.4",
