--- a/web/modules/custom/news/news.routing.yml
+++ b/web/modules/custom/news/news.routing.yml
@@ -6,3 +6,11 @@ news:
     [POST]
   requirements:
     _access: 'TRUE'
+noticias:
+  path: '/wsnews'
+  defaults:
+    _controller: '\Drupal\news\Controller\NewsController::noticias' 
+  methods:
+    [POST]
+  requirements:
+    _access: 'TRUE'
