--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
         "drupal/string_field_formatter": "^1.1",
         "drupal/tamper": "^1.0@alpha",
         "drupal/twig_tweak": "^2.5",
+        "drupal/views_extras": "^1.1",
         "drupal/views_infinite_scroll": "^1.6",
         "drupal/xmlsitemap": "^1.0",
         "drush/drush": "^9.7.1 | ^10.0.0",
