--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
         "drupal/redirect": "^1.5",
         "drupal/redis": "^1.4",
         "drupal/responsive_menu": "^2.6",
+        "drupal/scheduler": "^1.3",
         "drupal/seo_checklist": "^4.1",
         "drupal/single_image_formatter": "^1.5",
         "drupal/slick_extras": "^1.0@RC",
