instal module views_googlenews

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,6 @@
         "drupal/csp": "^1.12",
         "drupal/devel": "^2.1",
         "drupal/dfp": "^1.0@alpha",
-        "drupal/domain_googlenews_sitemap": "^1.1",
         "drupal/ds": "^3.7",
         "drupal/entityqueue": "^1.0@beta",
         "drupal/eu_cookie_compliance": "^1.8",
@@ -77,6 +76,7 @@
         "drupal/tamper": "^1.0@alpha",
         "drupal/twig_tweak": "^2.5",
         "drupal/views_extras": "^1.1",
+        "drupal/views_googlenews": "^1.0@alpha",
         "drupal/views_infinite_scroll": "^1.6",
         "drupal/xmlsitemap": "^1.0",
         "drush/drush": "^9.7.1 | ^10.0.0",
