--- a/web/modules/custom/custom_playlist/custom_playlist.routing.yml
+++ b/web/modules/custom/custom_playlist/custom_playlist.routing.yml
@@ -4,4 +4,5 @@ custom_playlist.admin_config_custom_playlist:
     _form: 'Drupal\custom_playlist\Form\CustomPlaylistSettings'
     _title: 'Configuration Videos'
   requirements:
-   _role: 'administrator,editor'
+    _permission: 'administer site configuration'
+    _role: 'administrator,editor'
